{
  "version": 4,
  "terraform_version": "1.3.5",
  "serial": 57,
  "lineage": "a396a24b-797a-5190-f5eb-017cb52c81c9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0aa2b7722dc1b5612",
            "arn": "arn:aws:ec2:us-east-1:381008891866:instance/i-01a09b70744553131",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01a09b70744553131",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-aws",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-039a2bcb95f1a29f4",
            "private_dns": "ip-172-31-21-162.ec2.internal",
            "private_ip": "172.31.21.162",
            "public_dns": "ec2-54-210-17-99.compute-1.amazonaws.com",
            "public_ip": "54.210.17.99",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0c32efc46a29bc765",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "acesso_ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c386dc6bb7722a88",
            "tags": {
              "Name": "dev0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02546cd255b755e8e"
            ]
          },
          "dependencies": [
            "aws_security_group.acesso_ssh"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0aa2b7722dc1b5612",
            "arn": "arn:aws:ec2:us-east-1:381008891866:instance/i-0d8c29e7062e8b156",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d8c29e7062e8b156",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-aws",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0557d2dca037fde74",
            "private_dns": "ip-172-31-21-25.ec2.internal",
            "private_ip": "172.31.21.25",
            "public_dns": "ec2-18-208-221-91.compute-1.amazonaws.com",
            "public_ip": "18.208.221.91",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0a7c5ca7f38dbcdbf",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "acesso_ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c386dc6bb7722a88",
            "tags": {
              "Name": "dev1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02546cd255b755e8e"
            ]
          },
          "dependencies": [
            "aws_security_group.acesso_ssh"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0aa2b7722dc1b5612",
            "arn": "arn:aws:ec2:us-east-1:381008891866:instance/i-0a8432b53dcaf9852",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a8432b53dcaf9852",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-aws",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0619838bc4a823ef1",
            "private_dns": "ip-172-31-24-34.ec2.internal",
            "private_ip": "172.31.24.34",
            "public_dns": "ec2-34-207-118-176.compute-1.amazonaws.com",
            "public_ip": "34.207.118.176",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-03f8c25ff89a5addb",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "acesso_ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c386dc6bb7722a88",
            "tags": {
              "Name": "dev2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02546cd255b755e8e"
            ]
          },
          "dependencies": [
            "aws_security_group.acesso_ssh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0aa2b7722dc1b5612",
            "arn": "arn:aws:ec2:us-east-1:381008891866:instance/i-06c9866d4ac32bfc8",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06c9866d4ac32bfc8",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-aws",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0bbb465d272b985a6",
            "private_dns": "ip-172-31-27-205.ec2.internal",
            "private_ip": "172.31.27.205",
            "public_dns": "ec2-54-87-41-101.compute-1.amazonaws.com",
            "public_ip": "54.87.41.101",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-06531b09177ddf460",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "acesso_ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c386dc6bb7722a88",
            "tags": {
              "Name": "dev5"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02546cd255b755e8e"
            ]
          },
          "dependencies": [
            "aws_security_group.acesso_ssh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05f6084a6b524a8f0",
            "arn": "arn:aws:ec2:us-east-2:381008891866:instance/i-032e1612aa65ae6f0",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-032e1612aa65ae6f0",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-aws",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d8a2c25e77275273",
            "private_dns": "ip-172-31-45-71.us-east-2.compute.internal",
            "private_ip": "172.31.45.71",
            "public_dns": "ec2-18-191-64-71.us-east-2.compute.amazonaws.com",
            "public_ip": "18.191.64.71",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "volume_id": "vol-03af41f50bf644098",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "acesso_ssh_us-east-2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ea4edba06dba9163",
            "tags": {
              "Name": "dev6"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0280c0716e881c1c5"
            ]
          },
          "dependencies": [
            "aws_dynamodb_table.dynamodb-desenvolvimento",
            "aws_security_group.acesso_ssh_us-east-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev7",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05f6084a6b524a8f0",
            "arn": "arn:aws:ec2:us-east-2:381008891866:instance/i-02c65e6a8bce1a037",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02c65e6a8bce1a037",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-aws",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0999c6cff3a34f4f4",
            "private_dns": "ip-172-31-45-156.us-east-2.compute.internal",
            "private_ip": "172.31.45.156",
            "public_dns": "ec2-18-119-14-86.us-east-2.compute.amazonaws.com",
            "public_ip": "18.119.14.86",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "volume_id": "vol-01b958900492f0a24",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "acesso_ssh_us-east-2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ea4edba06dba9163",
            "tags": {
              "Name": "dev7"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0280c0716e881c1c5"
            ]
          },
          "dependencies": [
            "aws_security_group.acesso_ssh_us-east-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "acesso_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381008891866:security-group/sg-02546cd255b755e8e",
            "description": "acesso_ssh",
            "egress": [],
            "id": "sg-02546cd255b755e8e",
            "ingress": [
              {
                "cidr_blocks": [
                  "191.32.154.79/32",
                  "192.32.154.79/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "acesso_ssh",
            "name_prefix": null,
            "owner_id": "381008891866",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0140befe97a4a88b9"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "acesso_ssh_us-east-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:381008891866:security-group/sg-0280c0716e881c1c5",
            "description": "acesso_ssh_us-east-2",
            "egress": [],
            "id": "sg-0280c0716e881c1c5",
            "ingress": [
              {
                "cidr_blocks": [
                  "191.32.154.79/32",
                  "192.32.154.79/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "acesso_ssh_us-east-2",
            "name_prefix": null,
            "owner_id": "381008891866",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "acesso_ssh_us-east-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b7b5cb4e832563b2"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}